# argus

./: .env.example  .gitignore  CHANGELOG.md  README.md  SPEC.md  db.py  feed_engine.py  pyproject.toml  server.py  summarizer.py
.github/workflows/: ci.yml
src/github_research_feed/: __init__.py  config.py  db.py  embeddings.py  feed_engine.py  github.py  server.py  summarizer.py
tests/: test_db.py  test_embeddings.py  test_feed_engine.py  test_server.py
